v2.0.0: Remove bow-shadow on button focus (avoid blurry effect if button is a link)

--- a/src/scss/blocks/_button.scss
+++ b/src/scss/blocks/_button.scss
@@ -68,6 +68,7 @@
     &.button--active {
         outline: none;
         border-radius: $button-border-radius;
+        box-shadow: none;
 
         @if $theme == "dark" {
             border-color: #fff;
@@ -145,6 +146,7 @@
     &:active,
     &.button--active {
         outline: none;
+        box-shadow: none;
 
         @if $theme == "dark" {
             border-color: #fff;
@@ -230,6 +232,7 @@
     &:active,
     &.button--active {
         outline: none;
+        box-shadow: none;
 
         @if $theme == "dark" {
             border-color: #fff;
