--- a/src/scss/blocks/form/_input-select.scss
+++ b/src/scss/blocks/form/_input-select.scss
@@ -104,7 +104,7 @@
     margin-top: $size-8;
     padding: $size-4 0;
     border-radius: $size-4;
-    box-shadow: 0 2px 10px rgba(79, 127, 182, 0.25); // $primary-blue
+    box-shadow: 0 2px 10px rgba(79, 127, 182, .25); // $primary-blue
     background: #fff;
     list-style-type: none;
     overflow-y: auto;
